--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,31 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap'); */
+
+.App {
+  text-align: left;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +33,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Playfair Display', serif !important;
 }
 
 code {
@@ -29,4 +58,26 @@ code {
 
 .navbar-nav {
   margin-left: auto !important;
+}
+
+.smalling {
+  height: 200px;
+  width: 100% !important;
+}
+
+h1 {
+  font-size: 20px !important;
+}
+
+.btn {
+  background-color: black !important;
+  color: white !important;
+  box-shadow: none !important;
+}
+
+.bs{
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  margin-top: 20px !important;
+  border-radius: 5px !important;
+  padding: 20px !important;
 }
