--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,3 +81,8 @@ h1 {
   border-radius: 5px !important;
   padding: 20px !important;
 }
+
+.bigimg{
+  height: 400px;
+  border-radius: 5px !important;
+}
