--- a/client/src/index.css
+++ b/client/src/index.css
@@ -87,3 +87,15 @@ h1 {
   border-radius: 5px !important;
 }
 
+input{
+  box-shadow: none !important;
+  margin-top: 10px;
+  border: 1px solid black !important;
+
+}
+
+h2 {
+  font-size: 30px !important;
+  padding: 10px;
+  font-weight: bold;
+}
