--- a/frontend/src/components/addvolunteerstyles.css
+++ b/frontend/src/components/addvolunteerstyles.css
@@ -6,7 +6,7 @@
   min-height: 100vh;
   align-items: center;
   flex-direction: column;
-  background-color: #27272D;
+  background-color: #152733;
 }
 .home-navbar {
   width: 100%;
@@ -323,6 +323,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.home-container0812 {
+  gap: 10%;
+  width: 100%;
+  height: auto;
+  max-height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 .home-text09 {
   font-size: 40px;
@@ -2064,4 +2074,7 @@ font-size: 12px;
 .row2 {
   height: 350px;
 }
+}
+.FORM{
+  width: 100%;
 }
